--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/pdyxs/react-object-page.git"
   },
   "dependencies": {
-    "@pdyxs/re-decorate": "^0.1.0",
+    "@pdyxs/re-decorate": "latest",
     "babel-core": "^6.0.20",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.10",
@@ -27,7 +27,7 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "flow-bin": "^0.37.4",
-    "re-editable": "^0.1.0",
+    "re-editable": "latest",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-markdown": "^3.6.0",
