--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "flow-bin": "^0.37.4",
+    "lodash": "^4.17.11",
     "re-editable": "^0.2.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
